[package]
name = "v2raya-panel"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.5"
image = "0.25.2"
log = "0.4.22"
png = "0.17.13"
reqwest = {version ="0.12.7", features = ["json"]}
serde = "1.0.209"
serde_derive = "1.0.209"
serde_json = "1.0.127"
tokio = {version = "1.39.3", features = ["full"]}
tray-item = {version = "0.10.0", features = ["ksni"]}
